[package]
name = "DX12ShaderStuffTrueTrace"
version = "0.1.0"
edition = "2021"
[dependencies]
d3d12 = { version = "22.0.0", features = ["implicit-link"] }
winapi = { version = "0.3.9", features = ["libloaderapi", "d3d12shader", "minwindef", "d3dcommon", "d3d12","d3d","dxgi","dxgitype", "errhandlingapi"] }
glob = "0.3.1"
serde_json = "1.0.133"
base64 = "0.22.1"
unity-native-plugin = { version = "0.7.0",features = ["d3d12","d3d11"] }
unity-native-plugin-sys = "0.7.0"
windows-sys = {version = "0.59.0",features = ["Win32","Win32_Foundation","Win32_UI","Win32_System","Win32_UI_WindowsAndMessaging","Win32_System_Memory","Win32_System_LibraryLoader","Win32_System_Diagnostics","Win32_System_Diagnostics_Debug","Win32_System_Diagnostics_Debug_Extensions"]}
shroud = "0.2.3"
log = "0.4.26"
[lib]
crate-type = ["cdylib"]
[env]
RUST_BACKTRACE = "1"
